--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -224,7 +224,7 @@
  proclaim_religious_finding:0 "Proclaimed Religious Revelation"
  artifact_celebrate_diversity:0 "เฉลิมฉลองความหลากหลาย"
  artifact_celebrate_diversity_desc:0 "Display some of our minor artifacts to show the diversity of life in the galaxy."
- celebrate_diversity:0 "Celebrating Diversity"
+ celebrate_diversity:0 "เฉลิมฉลองความหลากหลาย"
  artifact_proclaim_superiority:0 "ประกาศความเหนือกว่า"
  artifact_proclaim_superiority_desc:0 "Destroy minor artifacts to show disdain for civilizations better off dead."
  proclaim_superiority:0 "Apex of History"
