--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -12,7 +12,7 @@
  STATUS_QUO_CREATE_NEW_EMPIRE:0 "จักรวรรดิใหม่ $SPECIES|Y$ จะถูกสร้างขึ้นเป็นพันธมิตร หรือเป็นเมืองขึ้นของ $ACTOR|Y$ จากทั้งหมด $SYSTEMS|H$ ระบบดาวของ $TARGET|Y$ ที่ถูกยึดครอง"
  MESSAGE_DESC_FOR_PLANET_KILLER_CRACKER:0 "was utterly destroyed by"
  MESSAGE_DESC_FOR_PLANET_KILLER_SHIELDER:0 "was encased in an impenetrable shield by"
- MESSAGE_DESC_FOR_PLANET_KILLER_NEUTRON:0 "was purged of all higher forms of life by"
+ MESSAGE_DESC_FOR_PLANET_KILLER_NEUTRON:0 "ถูกกวาดล้างจากชีวิตที่สูงส่งกว่าโดย"
  MESSAGE_DESC_FOR_PLANET_KILLER_GODRAY:0 "had divine belief enforced on it by"
  MESSAGE_DESC_FOR_PLANET_KILLER_NANOBOTS:0 "was assimilated by nanobots from"
  MESSAGE_DESC_FOR_PLANET_KILLER_DELUGE:0 "was subjected to a deluge of water by"
@@ -75,13 +75,13 @@
  apoc.110.godray.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_GODRAY_DESC$§!"
  apoc.110.nanobots.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_NANOBOTS_DESC$§!"
  apoc.110.devolution.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_DEVOLUTION_DESC$§!"
- apoc.120.name:0 "Colossus Project Completed"
+ apoc.120.name:0 "โครงการโคลอสซัสเสร็จสมบูรณ์"
  apoc.120.desc:0 "$apoc.120.part.p1$"
  apoc.120.desc.milit:0 "$apoc.120.part.p1$ $apoc.120.part.milit$"
  apoc.120.desc.pacif:0 "$apoc.120.part.p1$ $apoc.120.part.pacif$"
  apoc.120.desc.phobe:0 "$apoc.120.part.p1$ $apoc.120.part.phobe$"
  apoc.120.desc.mater:0 "$apoc.120.part.p1$ $apoc.120.part.mater$"
- apoc.120.part.p1:0 "The Colossus Project, the monumental task of designing the biggest weapons platform in [Root.GetAdj] history and a §R[Root.Get1stPlanetKiller]§! to arm it with, has yielded results and drawn to a close."
+ apoc.120.part.p1:0 "โครงการโคลอสซัสเป็นภารกิจอันยิ่งใหญ่ในการออกแบบแพลตฟอร์มอาวุธที่ใหญ่ที่สุดในประวัติศาสตร์ [Root.GetAdj] และ §R[Root.Get1stPlanetKiller]§! ติดอาวุธที่จะใช้ในขั้นตอนท้ายสุด"
  apoc.120.part.milit:0 "While the first Colossus may not yet have been built, this very moment is the fulcrum upon which the history of the [Root.GetName] turns."
  apoc.120.part.pacif:0 "Let us hope nothing will come of this."
  apoc.120.part.phobe:0 "Let the xeno tremble in the face of our strength and ingenuity."
@@ -91,7 +91,7 @@
  apoc.120.a:0 "Boom."
  apoc.120.a.pacif:0 "A last resort."
  apoc.120.a.gesta:0 "รับทราบ"
- apoc.130.name:0 "[From.GetName] completes Colossus Project"
+ apoc.130.name:0 "[From.GetName] ทำโครงการโคลอสซัสเสร็จสมบูรณ์"
  apoc.130.desc:0 "Word has reached us that the [From.GetName] has developed specifications for a Colossus-type hull configuration, a weapon platform potentially capable of complete planetary destruction."
  apoc.130.a.weaker:0 "Alarming."
  apoc.130.a.stronger:0 "Suddenly a contender."
