--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -95,8 +95,8 @@
  civic_machine_remnants_desc:0 ""
  civic_custodian_directives:0 "ผู้พิทักษ์เมทริกซ์"
  civic_custodian_directives_desc:0 ""
- FALLEN_EMPIRE_LETHARGY_1:0 "§EUnable to construct new ships.§!"
- FALLEN_EMPIRE_LETHARGY_2:0 "§EUnable to conquer or colonize planets.§!"
+ FALLEN_EMPIRE_LETHARGY_1:0 "§Eไม่สามารถสร้างยานใหม่ได้§!"
+ FALLEN_EMPIRE_LETHARGY_2:0 "§Eไม่สามารถยึดครองหรือตั้งอาณานิคมบนดาวเคราะห์อื่นได้§!"
  CAN_NOT_EAT_MACHINES:0 "$TRIGGER_FAIL$Inorganic compounds cannot undergo §Y$purge_processing$§!."
  CANNOT_NECROPHAGE_MACHINES:0 "$TRIGGER_FAIL$Inorganic compounds cannot undergo §Y$purge_necrophage$§!."
  CANNOT_LIVESTOCK_MATRIX_MACHINES:0 "$TRIGGER_FAIL$Inorganic compounds are not suitable for this purpose."
@@ -589,7 +589,7 @@
  INTEL_LEVEL_TRIGGER:1 "ระดับข้อมูลของระบบดาว $SYSTEM$ $OPERATOR$$LEVEL|Y$"
  MISSING_WORMHOLE_STATION:0 "Out of reach! We need to build more Wormhole Stations closer to this system."
  FLEET_JUGGERNAUT_REPAIR:1 "§RThis ship cannot be sent for repair.§!"
- FLEET_NO_PATH:0 "There is no route for the selected fleet to reach this system."
+ FLEET_NO_PATH:0 "ไม่มีเส้นทางสำหรับกองยานที่เลือกเพื่อไปถึงระบบนี้"
  COPY_TEMPLATE:0 "คัดลอกเทมเพลต"
  FLEET_MANAGER_COPY_TEMPLATE:0 "§HCopy Template§!\n§GClick to copy this fleet composition§!"
  FLEET_NO_PATH_RESTRICTED:0 "System is set as restricted, so our fleets may not enter it."
@@ -964,7 +964,7 @@
  POP_MODIFIERS_DESC:0 "These modifiers only affect an individual Pop."
  ARMY_MODIFIERS:0 "การปรับเปลี่ยนกองทัพ"
  UNKNOWN_SYSTEM:0 "ไม่ทราบ"
- PLANETARY_FORT_EFFECTS:1 "All damage dealt to this army by invading armies is multiplied by §Yx$VAL$§! due to the state of the planetary fortifications."
+ PLANETARY_FORT_EFFECTS:1 "ความเสียหายทั้งหมดที่กองทัพนี้ทำกับกองทัพ(ฝ่ายบุก)จะเพิ่มขึ้นแบบทวีคูณ §Yx$VAL$§! เนื่องจากสถานะของป้อมปราการของดาวเคราะห์"
  POWER_USAGE:0 "ใช้พลังงาน: $VALUE|Y$"
  POWER_GENERATION:0 "ผลิตพลังงาน: $VALUE|Y$"
  SENSOR_RANGE_VALUE:0 "ระยะของเซ็นเซอร์ตรวจจับ: $VALUE|Y0$"
@@ -1241,7 +1241,7 @@
  BUILD_STARBASE_STATION_ORDER_DESC:0 "The §YStarbase§! is a space station used to claim star systems and expand your borders. It can only be built in orbit around a star."
  BUILD_WORMHOLE_STATION_ORDER:0 "Build Wormhole Station"
  BUILD_WORMHOLE_STATION_DESC:0 "§YWormhole Stations§! allow our fleets to travel between star systems."
- BUILD_WORMHOLE_STATION_SPACE_TARGET_DESC:0 "Build a wormhole station here"
+ BUILD_WORMHOLE_STATION_SPACE_TARGET_DESC:0 "สร้างสถานีรูหนอนที่นี่"
  BUILD_MILITARY_STATION_ORDER:0 "Build Military Station"
  BUILD_RULER_MILITARY_STATION_ORDER:0 "Build Ruler Military Station"
  BUILD_MILITARY_STATION_DESC:1 "A §YMilitary Station§! can be built anywhere in a star system to defend the area within its effective radius."
@@ -1254,8 +1254,8 @@
  BUILD_ORBITAL_STATION_ORDER_MAINTENANCE:0 "ค่าบำรุงรักษารายเดือน: $RESOURCES$"
  BUILD_MEGASTRUCTURE_ORDER:0 "สร้างสิ่งก่อสร้างขนาดมหึมา"
  BUILD_MEGASTRUCTURE_DESC:1 "§YMegastructures§! are truly massive construction projects only possible in the zero-g environment of space."
- BUILD_MEGASTRUCTURE_SPACE_TARGET_DESC:1 "Build a §YMegastructure§! here."
- BUILD_MEGASTRUCTURE_PLANET_TARGET_DESC:1 "Build a §YMegastructure§! around this stellar body."
+ BUILD_MEGASTRUCTURE_SPACE_TARGET_DESC:1 "สร้าง §Yสิ่งก่อสร้างขนาดมหึมา§! ที่นี่"
+ BUILD_MEGASTRUCTURE_PLANET_TARGET_DESC:1 "สร้าง §Yสิ่งก่อสร้างขนาดมหึมา§! รอบๆ ดาวดวงนี้"
  BUILD_MEGASTRUCTURE_ORDER_COST:0 "ค่าใช้จ่าย: $VAL|Y2$"
  BUILD_MEGASTRUCTURE_ORDER_MAINTENANCE:0 "ค่าบำรุงรายเดือน: £energy£ $VAL|Y2$"
  AUTOMATE_CONSTRUCTION_SHIP:0 "ก่อสร้างอัตโนมัติ"
@@ -1548,7 +1548,7 @@
  GARRISON_ASSAULT_POWER_INFO:0 "£army_power£ $VALUE|0Y$"
  INVADER_POWER_INFO:0 "ผู้รุกราน: £army_power£ $VALUE|0Y$"
  COMBAT_WIDTH:0 "ความกว้างแนวรบ"
- COMBAT_WIDTH_DESC:0 "$PLANET|Y$ has a $COMBAT_WIDTH$ of $AMT|Y$. This is calculated from the size of the planet and determines the number of armies that can deal damage simultaneously during combat."
+ COMBAT_WIDTH_DESC:0 "$PLANET|Y$ มี $COMBAT_WIDTH$ $AMT|Y$ ซึ่งคำนวณจากขนาดของดาวเคราะห์และกำหนดจำนวนกองทัพที่สามารถสร้างความเสียหายได้พร้อมกันระหว่างการรบ"
  PLANET_DAMAGE:0 "ทำความเสียหายกับดาวเคราะห์"
  PLANET_DAMAGED:1 "การทำลายล้าง: §R$DAMAGE|0$%§!"
  PLANET_DAMAGED_INFO:0 "Planet has suffered $DAMAGE|%Y$ damage. When Planetary Damage reaches §Y100%§!, a tile will be devastated, ruining buildings and potentially killing Pops."
@@ -1609,7 +1609,7 @@
  CAN_EXECUTE_ACTION_INVALID:0 "Action doesn't exist."
  WAR_EXHAUSTION_DESC:0 "War exhaustion is gained from destroyed civilian ships and effects pop happiness"
  FLEETORDER_BUILD_MILITARY_STATION:0 "Build Military Station"
- FLEETORDER_BUILD_MILITARY_STATION_DESC:0 "Build a military station to defend this position"
+ FLEETORDER_BUILD_MILITARY_STATION_DESC:0 "สร้างสถานีทางทหารเพื่อปกป้องตำแหน่งนี้"
  FLEETORDER_BUILD_RULER_MILITARY_STATION:0 "Build Ruler Unique Military Station"
  FLEETORDER_BUILD_RULER_MILITARY_STATION_DESC:0 "Build a Ruler Unique military station to defend this position"
  MEGASTRUCTURE:0 "สิ่งก่อสร้างขนาดมหึมา"
@@ -1722,10 +1722,10 @@
  RELATIVE_POWER_5_DESC:0 "พวกเขาแข็งแกร่งกว่าเรามาก เราควรหลีกเลี่ยงความขัดแย้งกับพวกเขา เว้นแต่เราจะมีพันธมิตรที่ทรงพลังอยู่ข้างเรา "
  RELATIVE_POWER_UNAVAILABLE_INTEL:0 "§Yยังไม่มีข้อมูล§!"
  RELATIVE_POWER_UNAVAILABLE_INTEL_DESC:1 "Your Intel is too low to compare the relative power of your Empires."
- EMPIRE_SPRAWL_UNAVAILABLE_INTEL_DESC:0 "You do not have Intel on how expansive their Empire is."
- PLANETS_UNAVAILABLE_INTEL_DESC:0 "You do not have Intel on how many planets their Empire has."
- POPS_UNAVAILABLE_INTEL_DESC:0 "You do not have Intel on how many Pops live in their Empire."
- DIPLOMATIC_WEIGHT_UNAVAILABLE_INTEL_DESC:1 "You do not have Intel on their Diplomatic Weight."
+ EMPIRE_SPRAWL_UNAVAILABLE_INTEL_DESC:0 "คุณไม่มีข้อมูลว่าจักรวรรดิของพวกเขากว้างขวางแค่ไหน"
+ PLANETS_UNAVAILABLE_INTEL_DESC:0 "คุณไม่มีข้อมูลว่าจักรวรรดิของพวกเขามีดาวเคราะห์กี่ดวง"
+ POPS_UNAVAILABLE_INTEL_DESC:0 "คุณไม่มีข้อมูลจำนวนประชากรในจักรวรรดิของพวกเขา"
+ DIPLOMATIC_WEIGHT_UNAVAILABLE_INTEL_DESC:1 "คุณไม่มีข้อมูลน้ำหนักการทูตของพวกเขา"
  GALACTIC_VOTE_BREAKDOWN_UNAVAILABLE_INTEL_DESC:0 "Your Intel is too low to know the reasoning behind their vote."
  stone_age:0 "ยุคหิน"
  stone_age_desc:0 "อารยธรรมนี้อยู่ในสถานะเทียบเท่ากับยุคหิน พวกเขาเชี่ยวชาญเรื่องไฟและพัฒนาภาษาพูดพื้นฐาน แต่เรายังไม่เห็นหลักฐานใดๆเกี่ยวกับโลหะวิทยาหรือการสื่อสารที่เป็นลายลักษณ์อักษร"
@@ -1919,7 +1919,7 @@
  TRADE_ITEM_GUARANTEE_DESC:0 "Guarantee the independence of the other party for the duration of the trade deal. The guarantor will join the war if the other party is attacked. Any alliances will not be brought in to the war."
  TRADE_ITEM_SUPPORT_INDEPENDENCE:0 "Support Independence"
  TRADE_ITEM_SUPPORT_INDEPENDENCE_DESC:0 "Support the independence of the other party for the duration of the trade deal. The guarantor will automatically join any war of independence if the other party declares against their overlord."
- TRADE_ITEM_MIGRATION_ACCESS:0 "Migration Access"
+ TRADE_ITEM_MIGRATION_ACCESS:0 "สามารถย้ายถิ่นฐานได้"
  TRADE_ITEM_MIGRATION_ACCESS_DESC:0 "Allow the other party's Pops to migrate to owned planets for the duration of the trade deal."
  TRADE_ITEM_RESEARCH_AGREEMENT:0 "ข้อตกลงการวิจัย"
  TRADE_ITEM_RESEARCH_AGREEMENT_DESC:2 "Gives the other party $BONUS|%+=$ research speed for technologies that the $OTHER|H$ have already researched, for the duration of the trade deal.\n\nApplicable unresearched technologies:\n£physics£ $PHYSICS|Y$     £society£ $SOCIETY|Y$     £engineering£ $ENGINEERING|Y$"
@@ -3592,7 +3592,7 @@
  FLEETORDER_LAND_ARMIES_COLONIZE_FIRST:0 "§RPlanet must be colonized before armies can land.§!"
  FLEETORDER_LAND_ARMIES_CANT_LAND:1 "§Rไม่มีกองทัพอยู่ในวงโคจรดาวที่จะบุกลงไปที่ผิวดาวได้§!"
  FLEETORDER_LAND_ARMIES_NO_ARMIES:0 "§Rไม่มีกองทัพอยู่ในวงโคจรดาว§!"
- FLEETORDER_LAND_ARMIES_NOT_IN_ORBIT:0 "§RFleet must be in orbit to land.§!"
+ FLEETORDER_LAND_ARMIES_NOT_IN_ORBIT:0 "§Rกองยานจะต้องอยู่ในวงโคจรเพื่อลงจอดผิวดาว§!"
  FLEETORDER_LAND_ARMIES_NOT_TRANSPORT_FLEET:0 "§RFleet is not a transport fleet.§!"
  FLEETORDER_LAND_ARMIES_STARBASE_HOSTILE:0 "§RHostile Starbase in $SYSTEM|Y$ prevents planetary invasion.§!"
  FLEETORDER_HAS_NO_SCIENTIST:0 "§Rต้องการนักวิทยาศาสตร์§!"
@@ -4044,7 +4044,7 @@
  trait_ruler_battleship_focus_desc:1 "This leader is intent on promoting the construction of Battleships."
  trait_ruler_recruiter:0 "ผู้สรรหา"
  trait_ruler_recruiter_desc:1 "This leader is particularly charismatic, and fresh recruits are practically lining up to serve their nation."
- trait_ruler_from_the_ranks:0 "จากยศ"
+ trait_ruler_from_the_ranks:0 "ไต่เต้าจากตำแหน่งต่ำ"
  trait_ruler_from_the_ranks_desc:1 "This leader rose through the ranks of military command."
  trait_ruler_fortifier:0 "นักป้อมปราการ"
  trait_ruler_fortifier_desc:1 "This ruler understands the value in using military stations to secure territory."
@@ -5119,14 +5119,14 @@
  OCCUPATION_OF:0 "การยึดครอง $PLANET|H$"
  ENCOUNTER:0 "การเผชิญหน้า"
  ENGAGEMENT:0 "การสู้รบ"
- COMBATANTS:0 "คู่ต่อสู้"
+ COMBATANTS:0 "คู่สงคราม"
  RESULT:1 "ความอิดโรยจากสงคราม"
  RESULT_FORMAT:0 "$OURS$ / $THEIRS$"
  LOCATION:0 "สถานที่"
  WON:0 "ชนะ"
  LOST:0 "แพ้"
  VS:0 "vs"
- BATTLE_DESC:2 "§HEngagement§!\nMilitary actions taken in this war, listed by §H$COMBATANTS$§!, §H$LOCATION$§!, and §H$RESULT$§!."
+ BATTLE_DESC:2 "§Hการปะทะ§!\nกิจกรรมทางทหารที่เกิดขึ้นในสงครามนี้ ระบุโดย §H$COMBATANTS$§!, §H$LOCATION$§!, และ §H$RESULT$§!"
  DESTRUCTION_OF:0 "Destruction of $PLANET|H$"
  SITUATION_LOG_TRACKED_TOOLTIP:0 "§HTracked§!\nThis entry is currently tracked on the map."
  SITUATION_LOG_HEADER:0 "บันทึกสถานการณ์"
@@ -5776,7 +5776,7 @@
  NO_ELECTION:0 "ไม่มีการเลือกตั้ง"
  CREATE_VASSAL:0 "สร้างบริวาร"
  CREATE_VASSAL_NOT_CONTROLLER:0 "We do not control this planet."
- CREATE_VASSAL_AT_WAR:0 "Must be at peace to release vassals."
+ CREATE_VASSAL_AT_WAR:0 "ต้องไม่มีสงคราม"
  CREATE_VASSAL_NO_AVAILABLE_PLANET:0 "We do not own any planet that we can give up."
  CREATE_VASSAL_GIVE_PLANET_DESC:0 "Give $WHO|H$ ownership over $PLANET|H$ and make them our vassal."
  GOVERMENT_LABEL:0 "รัฐบาล:"
@@ -9787,7 +9787,7 @@
  alert_can_modify_species_entry:0 "$SPECIES|Y$: แต้มคุณลักษณะที่ยังไม่ได้ใช้ $POINTS|Y$"
  alert_unspent_leader_trait_points_title:0 "มีคุณลักษณะผู้นำให้เลือก"
  alert_unspent_leader_trait_points_instant:0 "There are Leaders with pending Trait selections"
- alert_unspent_leader_trait_points_delayed:0 "§ETrait selections available for:§!"
+ alert_unspent_leader_trait_points_delayed:0 "§Eมีให้เลือกคุณลักษณะสำหรับ:§!"
  alert_unspent_leader_trait_points_instruction:0 "§Gคลิกเพื่อเปิดหน้าต่างผู้นำ§!"
  alert_available_council_agenda_title:0 "แผนการของสภาที่มี"
  alert_available_council_agenda_instant:0 "You can select a Council Agenda for your Empire."
@@ -9888,8 +9888,8 @@
  ARMY_VIEW_NO_SPECIES_DESC:0 "This type of army does not have a species."
  ARMY_VIEW_MAINTENANCE_DESC:1 "ในแต่ละเดือนมีค่าใช้จ่ายในการบำรุงรักษา $VAL|Y2$£energy£"
  ARMY_VIEW_NO_MAINTENANCE_DESC:0 "This type of army does not have a monthly upkeep cost."
- LOW_MORALE_EFFECT:0 "Damage dealt by this army is reduced by $PERC|Y0%$ due to low morale."
- DISENGAGED_EFFECT:0 "Damage dealt by this army is reduced by $PERC|Y0%$ due to being disengaged."
+ LOW_MORALE_EFFECT:0 "ความเสียหายที่กองทัพนี้สร้างจะลดลง $PERC|Y0%$ เนื่องจากขวัญกำลังใจต่ำ"
+ DISENGAGED_EFFECT:0 "ความเสียหายที่กองทัพนี้สร้างจะลดลง $PERC|Y0%$ เนื่องจากการหลุดรอดจากภัยอันตราย"
  BROKEN_MORALE_EFFECT:0 "This army's morale is Broken, reducing the damage they deal by $PERC|Y0%$."
  ANOMALY_VIEW_CLOSE:0 "ปล่อยไปก่อนในตอนนี้"
  ANOMALY_LEVEL:2 "ความยาก"
@@ -9995,7 +9995,7 @@
  edict_drone_bounty_desc:1 "§LInstruct our fleets to salvage the energy cells of defeated Ancient Mining Drones.§!\nEnergy Credits per fleet defeated: §G500§!"
  edict_declare_saint:0 "ประกาศนักบุญ"
  edict_declare_saint_desc:0 "This Edict will bestow sainthood upon a deceased individual who led a particularly pious life, creating a new unifying symbol."
- unity_ambition:0 "ความทะเยอทะยาน:"
+ unity_ambition:0 "ความปรารถนาฯ:"
  edict_scientific_revolution:0 "$unity_ambition$ การปฏิวัติทางวิทยาศาสตร์"
  edict_scientific_revolution_desc:0 "A brief yet highly productive golden age of scientific discovery. The combination of fearlessness, ingenuity and unbridled optimism can take you far."
  edict_desperate_measures:0 "$unity_ambition$ มาตรการเข้าตาจน"
@@ -10601,7 +10601,7 @@
  feature_gateway_construction:0 "การก่อสร้างเกตเวย์"
  feature_gateway_construction_desc:0 "Allows us to rebuild and construct new Gateways."
  feature_unity_ambitions:0 "ความปรารถนาอันแรงกล้า"
- feature_unity_ambitions_desc:0 "Unlocks a set of §YEdicts§! called Unity Ambitions. They are different from Edicts in the sense that they cost £unity£ §YUnity§! to use and that the amount is equal to what it would cost to unlock your next Tradition. Using a Unity Ambition will not increase the £unity£ Unity cost for Traditions or Unity Ambitions."
+ feature_unity_ambitions_desc:0 "ปลดล็อกเซ็ตของ §Yประกาศคำสั่ง§! ที่เรียกว่า 'ความปรารถนาอันแรงกล้า' พวกมันแตกต่างจากประกาศคำสั่งทั่วไปในแง่ที่ว่ามีค่าใช้จ่าย £unity£ §Yเอกภาพ§! ที่ใช้ปลดล็อกวัฒนธรรมของคุณ การใช้ความปรารถนา(อันแรงกล้า)จะไม่เพิ่มค่าใช้จ่าย £unity£ §Yเอกภาพ§! สำหรับวัฒนธรรมหรือความปรารถนา"
  feature_campaign_edicts:0 "เพิ่มประกาศคำสั่ง (การรณรงค์)"
  feature_campaign_edicts_desc:2 "Unlocks additional edicts called §YCampaigns§! that cost Energy instead of Unity."
  feature_jump_method:0 "การเดินทางแบบกระโดดข้าม (จั้มไดร์ฟ)"
@@ -11340,8 +11340,8 @@
  war_goal_wg_renegade_containment_desc:0 "สงครามเพื่อยุติการคุกคามต่อประชาคมกาแล็กติกโดยสมบูรณ์"
  war_goal_wg_end_threat_renegade_containment:0 "$war_goal_wg_end_threat$"
  war_goal_wg_end_threat_renegade_containment_desc:0 "สงครามเพื่อปกป้องตัวเราเองจากการชิงทำสงครามก่อนโดยปราศจากเหตุผล"
- wg_independence_accept:2 "All participating vassals become independent from §Y[From.GetName]§!\n§Y[From.GetName]§! revokes all claims on freed vassal systems."
- wg_independence_status_quo:2 "All participating vassals become independent from §Y[From.GetName]§!"
+ wg_independence_accept:2 "จักรวรรดิบริวารที่เข้าร่วมทั้งหมดจะเป็นอิสระจาก §Y[From.GetName]§!\n§Y[From.GetName]§! ถอนการอ้างสิทธิ์ ในดินแดนของจักรวรรดิบริวารทั้งหมด ที่เป็นอิสระ"
+ wg_independence_status_quo:2 "จักรวรรดิบริวารที่เข้าร่วมทั้งหมดจะเป็นอิสระจาก §Y[From.GetName]§!"
  wg_assert_overlordship_accept:1 "§Y[From.GetName]§! ยังคงเป็นบริวารของ §Y[Root.GetName]§!"
  wg_force_ideology_accept:2 "§Y[This.GetName]§! ถูกบังคับให้รับหลักจริยธรรม และรูปแบบการปกครองของ §Y[Root.GetName]§!"
  wg_force_ideology_accept_2:1 "§Y[This.GetRulerTitle] [This.GetRulerName]§! ถูกบังคับให้สละอำนาจ"
@@ -11852,7 +11852,7 @@
  lesser_space_cloud_plural:0 "$space_cloud_plural$"
  SCORE_FROM_MEGASTRUCTURES:0 "จากสิ่งก่อสร้างขนาดมหึมา: $VALUE$"
  FLEET_REINFORCE_NO_SHIPYARD:0 "ไม่มีอู่ต่อยานที่ว่างพอที่จะสร้างกองยานได้"
- SPYNET_THERE_ARE_AVAILABLE_ASSETS:1 "§GThere are available assets§!\n$ESPIONAGE_ASSET_CLICK_ASSIGN$"
+ SPYNET_THERE_ARE_AVAILABLE_ASSETS:1 "§Gมีจารชนพร้อมใช้งาน§!\n$ESPIONAGE_ASSET_CLICK_ASSIGN$"
  SPYNET_THERE_ARE_NO_AVAILABLE_ASSETS:0 "§RThere are no available assets§!"
  crisis_empire_base:0 "ไครซิส"
  vluur_power:0 "Vluur"
@@ -11885,7 +11885,7 @@
  country_monuments:0 "Monuments"
  country_suppression:0 "Suppressing Factions"
  country_promotion:0 "Promoting Factions"
- country_ambition:0 "Ambitions"
+ country_ambition:0 "ความปรารถนา/ความทะเยอทะยาน"
  country_federation_perks:0 "ความสามารถของสหพันธ์"
  country_civics:0 "พลเมือง"
  country_covenant:0 "พันธสัญญา"
@@ -11969,7 +11969,7 @@
  resource_usage_tooltip_title: "ใช้ £$icon$£ $name$ อัตโนมัติ"
  resource_usage_tooltip: "£trigger_yes£ ระบบบริหารดาวเคราะห์อัตโนมัติ ได้รับอนุญาตให้ใช้ £$icon$£ $name$ เมื่อสร้างบนดาวเคราะห์"
  resource_usage_tooltip_neg: "£trigger_no£ ระบบบริหารดาวเคราะห์อัตโนมัติ ไม่ได้รับอนุญาตให้ใช้ £$icon$£ $name$ เมื่อสร้างบนดาวเคราะห์"
- MOD_VERSION:0 "Mod v0.70.6, Update 27/10/2023"
+ MOD_VERSION:0 "Mod v0.70.7, Update 03/11/2023"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Galactic Council เดิมใช้(สภากาแล็กติก) -> เปลี่ยนเป็น(สภาปกครองกาแล็กติก)\n - Senate Floor เดิมใช้(ชั้นสภาสูง) -> เปลี่ยนเป็น(ชั้นวุฒิสภา)\n - Senate -> วุฒิสมาชิก\n - Satrapy เดิมใช้(เซแทร็ป/เจ้าประเทศราช) -> เปลี่ยนเป็น(เซทระพี/เขตปกครอง)\n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
