--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -2352,16 +2352,16 @@
  decision_expand_preserves_desc: "With superior planning and guidance, this planet can serve as a true sanctuary for all ecosystems."
  decision_resort_colony:0 "สร้างดาวรีสอร์ต (ที่พักตากอากาศ)"
  decision_resort_colony_desc:1 "This world is set aside as a peaceful resort world, attracting tourists and visitors from far away. To preserve the planet's natural beauty, construction on the surface is severely limited."
- decision_resort_colony_effects_short:0 "Disables construction of £district£ §YDistricts§! and most £building£ §YBuildings§! on the planet\n\nIncreases £amenities£ §Y$MOD_PLANET_AMENITIES_MULT$§! on all other owned planets"
- decision_resort_colony_no_districts:0 "£trigger_no£ The planet must be unspoiled by district and building development."
+ decision_resort_colony_effects_short:0 "ปิดการใช้งานการก่อสร้าง £district£ §Yเขตต่างๆ§! และ £building£ §Yสิ่งปลูกสร้าง§! ส่วนใหญ่บนดาวเคราะห์\n\nเพิ่ม £amenities£ §Y$MOD_PLANET_AMENITIES_MULT$§! บนดาวเคราะห์ดวงอื่นๆ ที่เป็นเจ้าของ"
+ decision_resort_colony_no_districts:0 "£trigger_no£ ดาวจะต้องไม่ถูกทำลายด้วยการพัฒนาเขตและสิ่งปลูกสร้าง"
  decision_resort_colony_only_one:0 "£trigger_no£ The §Y[Root.Owner.GetName]§! can only have one §Y$resort_colony$§!."
- no_upgraded_capital_tooltip:0 "£trigger_no£ The planet may not have an upgraded capital building."
+ no_upgraded_capital_tooltip:0 "£trigger_no£ ดาวนี้อาจไม่มีการอัปเกรดสิ่งปลูกสร้างที่เป็นเมืองหลวง"
  decision_abolish_resort_colony:0 "ยกเลิกดาวเคราะห์รีสอร์ต"
  decision_abolish_resort_colony_desc:1 "This world will no longer be considered a special resort, and all construction restrictions on its surface are lifted."
- resort_colony_empire_effects:0 "อาณานิคมของจักรวรรดิอื่น:\n   $MOD_PLANET_AMENITIES_MULT$: §G+15%§!\n   $MOD_PLANET_IMMIGRATION_PULL_MULT$: §G+15%§!"
+ resort_colony_empire_effects:0 "อาณานิคมอื่นๆของจักรวรรดิ:\n   $MOD_PLANET_AMENITIES_MULT$: §G+15%§!\n   $MOD_PLANET_IMMIGRATION_PULL_MULT$: §G+15%§!"
  decision_crucible_colony:0 "สร้างดาวแห่งเบ้าหลอม"
  decision_crucible_colony_desc:0 "This world shall provide a dedicated environment in which the progeny of our cyborg drones can develop to become productive components of the collective."
- decision_crucible_colony_effects_short:0 "Disables construction of some £building£ §YBuildings§! on the planet\n\nIncreases £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§! in exchange for increased §Y$mod_planet_pops_upkeep_mult$§! and decreased §YResources from Jobs§!"
+ decision_crucible_colony_effects_short:0 "ปิดการใช้งานการก่อสร้าง £building£ §Yเขตต่างๆ§! บางเขตบนดาวเคราะห์\n\nเพิ่ม £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§! เพื่อแลกกับการเพิ่ม §Y$mod_planet_pops_upkeep_mult$§! และลด §Yทรัพยากรจากงาน§!"
  decision_abolish_crucible_colony:0 "ยกเลิกดาวแห่งเบ้าหลอม"
  decision_abolish_crucible_colony_desc:0 "We shall repurpose this world for other uses."
  decision_crucible_colony_only_one:0 "£trigger_no£ The §Y[Root.Owner.GetName]§! can only have one §Y$crucible_colony$§!."
@@ -2370,17 +2370,17 @@
  crucible_colony_effects:0 "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! §Y£job_replicator£ งาน $job_replicator$§! ถูกแทนที่ด้วย §Y£job_crucible_drone£ งาน $job_crucible_drone$§!"
  decision_slave_colony:0 "สร้างดาวทาส"
  decision_slave_colony_desc:0 "This entire world is purpose-built to maximize the growth rate of its enslaved population through a variety of reproductive incentives."
- decision_slave_colony_effects:0 "Disables construction of £housing£ §YCity Districts§! and most £building£ §YBuildings§! on the planet\nAllows construction of £building£ §YSlave Huts§!\n£pop£ §YFree Pops§! can no longer grow on the planet"
+ decision_slave_colony_effects:0 "ปิดการใช้งานการก่อสร้าง £housing£ §Yเขตเมือง§! และ £building£ §Yสิ่งปลูกสร้าง§! ส่วนใหญ่บนดาวเคราะห์\nAllows construction of £building£ §YSlave Huts§!\n£pop£ §YFree Pops§! can no longer grow on the planet"
  decision_slave_colony_must_have_slave:0 "£trigger_no£ Must have at least one £pop£ Pop from a §YFully Enslaved§! Species on the planet."
  decision_slave_colony_effects_short:0 "Greatly increases §YPop Growth Speed§!\n\nPlanet becomes largely unsuitable for £pop£ §YFree Pops§!"
  decision_abolish_slave_colony:0 "ยกเลิกดาวทาส"
  decision_abolish_slave_colony_desc:0 "This world will no longer be considered a Thrall-World, and growth incentive programs for its shackled population are ended."
  decision_penal_colony:0 "สร้างทัณฑนิคม (อาณานิคมสถานที่คุมขัง)"
  decision_penal_colony_desc:1 "This entire world is set aside as a massive penal colony. The vast prison communities are largely self-managed by the prisoners, and punishment often means exile into the unforgiving wilderness."
- decision_penal_colony_effects_short:0 "Increases £crime£ §YCrime§! and §YImmigration Pull§! on the planet\n\nReduces £crime£ §YCrime§! on all other owned planets"
+ decision_penal_colony_effects_short:0 "เพิ่ม £crime£ §Yอาชญากรรม§! และ §Yดึงการอพยพย้ายเข้า§! บนดาวดวงนี้\n\nลด £crime£ §Yอาชญากรรม§! บนดาวเคราะห์ดวงอื่นๆ ที่เป็นเจ้าของ"
  decision_abolish_penal_colony:0 "ยกเลิกทัณฑนิคม"
  decision_abolish_penal_colony_desc:1 "The status as a penal colony is removed from this world, and its inhabitants are afforded the same rights and responsibilities as any other planet."
- penal_colony_empire_effects:0 "อาณานิคมของจักรวรรดิอื่น:\n   $MOD_PLANET_CRIME_MULT$: §G-25%§!"
+ penal_colony_empire_effects:0 "อาณานิคมอื่นๆของจักรวรรดิ:\n   $MOD_PLANET_CRIME_MULT$: §G-25%§!"
  building_resort_capital:0 "ศูนย์บริหารและที่พักตากอากาศ (เมืองหลวง)"
  building_resort_capital_desc:0 "The central complex from where this planet-wide resort is administrated."
  building_resort_major_capital:0 "นครหลวงที่มีที่พักตากอากาศเชิงซ้อน"
@@ -2697,9 +2697,9 @@
  anticrime_campaign:0 "รงค์ต่อต้านอาชญากรรม"
  anticrime_campaign_desc:0 "The Enforcers on this world are currently conducting an extensive crime prevention campaign."
  anticrime_campaign_tooltip:4 "การลดอาชญากรรมของผู้คุมกฎ: §G+10§!\nค่าบำรุงรักษาผู้คุมกฎ: §R+2§! £energy£  \n"
- crime_lord_deal:0 "Crime Lord Deal"
+ crime_lord_deal:0 "ตกลงกับผู้นำอาชญากร"
  crime_lord_deal_desc:0 "The legal authorities on this world currently have a "mutual understanding" with the leading crime lords to prevent the worst excesses of their organizations."
- crime_lord_deal_broken:0 "Broken Crime Lord Deal"
+ crime_lord_deal_broken:0 "แตกหักกับผู้นำอาชญากร"
  crime_lord_deal_broken_desc:0 "The authorities on this world have broken their deal with the leading crime lords, casting the criminal underworld and law enforcement into chaos."
  deviant_interference:0 "แทรกแซงการเบี่ยงเบน"
  deviant_interference_desc:0 "Deviant drones are interfering with our facilities on this world."
@@ -4196,7 +4196,7 @@
  NAVBAR_UNLOCKED:0 "แถบนำทางถูก §Yปลดล็อก§!"
  CONSTRUCTION_UNAVAILBALE_SLOT_LOCKED:0 "Cannot construct a building in this slot until this planet has $NUM|Y$ £pop£ Pops"
  PLANET_VIEW_CORPORATE_TAB_DISABLED:0 "§Yยังไม่มีบริษัทของจักรวรรดิอื่นมาตั้งสาขาที่ดาว ดวงนี้§!"
- GROUND_COMBAT_RESERVES:0 "Reserves"
+ GROUND_COMBAT_RESERVES:0 "กองหนุน"
  GROUND_COMBAT_FRONTLINE:0 "แนวหน้า"
  ARMY_STRENGTH:0 "£army_power£ $VALUE|0Y$"
  ORBITING_ARMIES:0 "กองทัพที่วงโคจรดาว"
