--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -31,8 +31,8 @@
  TRIGGER_INTEL_NOT:2 "ข้อมูลข่าวกรอง $COUNTRY$ ไม่ $COMPARATOR$ $NUM|Y$"
  TRIGGER_INTEL_LEVEL:1 "$CATEGORY$ ข้อมูลข่าวกรองใน $COUNTRY$ $COMPARATOR$ $NUM|Y$"
  TRIGGER_INTEL_LEVEL_NOT:1 "$CATEGORY$ ข้อมูลข่าวกรองใน $COUNTRY$ ไม่ $COMPARATOR$ $NUM|Y$"
- TRIGGER_INTEL_REPORT:0 "$CATEGORY$ Intel report of $COUNTRY$ is $COMPARATOR$ $NUM|Y$"
- TRIGGER_INTEL_REPORT_NOT:0 "$CATEGORY$ Intel report of $COUNTRY$ is NOT $COMPARATOR$ $NUM|Y$"
+ TRIGGER_INTEL_REPORT:0 "$CATEGORY$ รายงานข่าวกรองของ $COUNTRY$ $COMPARATOR$ $NUM|Y$"
+ TRIGGER_INTEL_REPORT_NOT:0 "$CATEGORY$ รายงานข่าวกรองของ $COUNTRY$ ไม่ $COMPARATOR$ $NUM|Y$"
  TRIGGER_INTEL_AVAILABLE:0 "$INTEL|Y$ is available for $COUNTRY$"
  TRIGGER_INTEL_AVAILABLE_NOT:0 "$INTEL|Y$ is not available for $COUNTRY$"
  TRIGGER_INTEL_STALE:0 "$INTEL|Y$ is stale for $COUNTRY$"
@@ -119,12 +119,12 @@
  FEDERATION_CENTRALIZATION_INTEL:0 "This level of centralization will add $INTEL|Y$ to the base level of Intel provided by this Federation type, setting it to a minimum of $TOTAL|Y$."
  FEDERATION_TYPE_INTEL:0 "ข่าวกรองพื้นฐานของสมาชิกสหพันธ์ถูกกำหนดขั้นต่ำที่ $INTEL|Y$ และปรับเปลี่ยนโดยการรวมอำนาจเข้าสู่ส่วนกลางของสหพันธ์"
  OPINION_BREAKDOWN_NOT_ENOUGH_INTEL:2 "Since we do not have enough Intel, we can only speculate as to their reasons."
- CANNOT_INSPECT_NO_INTEL:1 "We do not have enough Intel to know their ship design."
+ CANNOT_INSPECT_NO_INTEL:1 "เรามีข้อมูลไม่เพียงพอที่จะทราบการออกแบบยานของพวกเขา"
  INTEL_NEGATIVE:1 "ข้อมูลข่าวกรองของ $TARGET|R$ กำลังลดลง"
  ACTION_EMBASSY_OFFER_DESC:0 "§H[Actor.GetName]§! อยากให้เราจัดตั้งสถานทูตร่วมกัน"
  INTEL_HOW_TO_GAIN:1 "§E§Yข้อมูลข่าวกรอง§! เพิ่มขึ้นได้ด้วยการปรับปรุง §Yความเชื่อใจ§!, §Yการแทรกซึม§! เครือข่ายสายลับ หรือการทำ §Yสนธิสัญญาทางการทูต§! ที่ลึกขึ้นกับจักรวรรดิอื่น\n\nปฏิบัติการ §Yรวบรวมข้อมูล§! ยังสามารถทำให้ได้รับรายงานข้อมูลแบบชั่วคราวได้อีกด้วย§!"
  BASE_INTEL_LEVEL:0 "เลเวล: $LEVEL$"
- INTEL_REPORT_DETAILS:0 "Intel Report: $LEVEL$$EXPIRATION$"
+ INTEL_REPORT_DETAILS:0 "รายงานข่าวกรอง: $LEVEL$$EXPIRATION$"
  INTEL_REPORT_EXPIRATION:0 " (£time£ $DAYS|Y$)"
  INTEL_CATEGORY_INFO_BREAKDOWN:1 "§Hข้อมูลที่มี:§!\n$BREAKDOWN$"
  INTEL_CATEGORY_TITLE:0 "ข้อมูล$CATEGORY$"
