--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -42,7 +42,7 @@
  RESOURCE_CONTRIBUTION_HEADER:0 "$RESOURCE_CONTRIBUTION$:"
  RESOURCE_TERM_WITH_ICONS:0 "$TERM$ $ICONS$"
  AGREEMENT_TERM_HEADER:0 "$TERM$:"
- LOYALTY_UNAVAILABLE_INTEL_DESC:0 "You do not have Intel on their Loyalty."
+ LOYALTY_UNAVAILABLE_INTEL_DESC:0 "คุณไม่มีข้อมูลความภักดีของพวกเขา"
  LOYALTY_TOOLTIP_TITLE:0 "§Hความภักดี§!"
  MONTHLY_LOYALTY_TOOLTIP_TITLE:0 "§Hการเปลี่ยนแปลงความภักดีรายเดือน§!"
  LOYALTY_VALUE_DESC:0 "ความภักดีที่พวกเขามีต่อ $OVERLORD|H$ คือ $LOYALTY|+=0$"
@@ -161,7 +161,7 @@
  TRADE_DEAL_RESOURCE_EXISTING_AGREEMENT:2 "$TRIGGER_FAIL$We are currently exchanging $RESOURCE|H$ as part of our §HSubject Agreement§! with $OTHER|H$"
  AGREEMENT_RESOURCE_BLOCKS_TRADE:0 "§Rข้อกำหนดนี้จะบล็อก §Hข้อตกลงการค้า§! สำหรับทรัพยากร$RESOURCE$§!"
  subject_loyalty:0 "บริวาร"
- subject_xenophobe:0 "Is Xenophobe"
+ subject_xenophobe:0 "เกลียดต่างดาว"
  has_access:0 ""
  END_AGREEMENT:0 "ยุติข้อตกลง"
  joins_overlord_wars_none:0 "ไม่"
@@ -458,9 +458,9 @@
  HOLDING_RESOURCES_TARGET_COUNTRY:0 "§Hสำหรับ $COUNTRY|Y$:§!"
  OVERLORD_HOLDING_CONSTRUCTION_TITLE:0 "Overlord Holding Construction Complete"
  OVERLORD_HOLDING_CONSTRUCTION_DESC:0 "Our Overlord $OVERLORD|Y$ has finished building a $HOLDING|Y$ on our planet $PLANET|Y$."
- holding_garrison:0 "Overlord Garrison"
+ holding_garrison:0 "กองพันโอเวอร์ลอร์ด"
  holding_garrison_desc:1 "A garrison established to oversee the local enforcers, occasionally reinforced by military battalions in more dire circumstances."
- holding_garrison_armies_desc:1 "Every Overlord army on this planet gives an additional §G-10%§! [Root.CrimeOrDeviancy], §G+0.5§! $r_loyalty$ and §R-5%§! Happiness, to a maximum of §G-30%§! [Root.CrimeOrDeviancy], (an additional) §G+1.5§! $r_loyalty$ and §R-15%§! Happiness."
+ holding_garrison_armies_desc:1 "กองทัพของเจ้าเหนือหัวทุกกองทัพบนดาวนี้ให้โบนัสเพิ่ม [Root.CrimeOrDeviancy] §G-10%§!, $r_loyalty$ §G+0.5§! และ  ความสุข §R-5%§!, [Root.CrimeOrDeviancy] สูงสุด §G-30%§!, $r_loyalty$ (เพิ่มเติม) §G+1.5§! และ ความสุข §R-15%§!"
  holding_orbital_assembly_complex:0 "Orbital Assembly Complex"
  holding_orbital_assembly_complex_desc:1 "A soaring building filled with long assembly lines, creating everything one could dream of."
  holding_orbital_assembly_complex_effect:1 "Increases the effects of modules on the planet's §YOrbital Ring§!."
