--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -992,7 +992,7 @@
  leader_trait_artillerist_desc:1 "This leader favors heavy ordinance and alpha strike techniques."
  leader_trait_artillerist_2:0 "Artillerist II"
  leader_trait_artillerist_2_desc:0 "$leader_trait_artillerist_desc$"
- leader_trait_annihilator:0 "Annihilator"
+ leader_trait_annihilator:0 "นักทำลายล้าง"
  leader_trait_annihilator_desc:1 "This leader focuses on the quick destruction of planetary defenses."
  leader_trait_cautious_2:0 "$leader_trait_cautious$ II"
  leader_trait_cautious_2_desc:0 "$leader_trait_cautious_desc$"
@@ -1018,7 +1018,7 @@
  leader_trait_armada_logistician_2_desc:0 "$leader_trait_armada_logistician_desc$"
  trait_ruler_military_pioneer_2:0 "$trait_ruler_military_pioneer$ II"
  trait_ruler_military_pioneer_2_desc:0 "$trait_ruler_military_pioneer_desc$"
- leader_trait_surgical_bombardment:0 "Surgical Bombardment"
+ leader_trait_surgical_bombardment:0 "ทิ้งระเบิดเฉียบคม"
  leader_trait_surgical_bombardment_desc:0 "This leader can identify valuable military targets with ease."
  leader_trait_wrecker:0 "Wrecker"
  leader_trait_wrecker_desc:1 "This leader is not concerned with leaving enemy ships in a salvageable state for research, preferring to vaporize them if possible."
@@ -1050,7 +1050,7 @@
  leader_trait_commanding_presence_desc:1 "This leader holds a special place in the navy, attracting the most skilled captains and logisticians."
  leader_trait_commanding_presence_2:0 "$leader_trait_commanding_presence$ II"
  leader_trait_commanding_presence_2_desc:0 "$leader_trait_commanding_presence_desc$"
- leader_trait_demolisher:0 "Demolisher"
+ leader_trait_demolisher:0 "นักรื้อถอน"
  leader_trait_demolisher_desc:1 "This leader is exceptionally skilled at demolishing stationary defenses."
  leader_trait_skirmisher:0 "นักสู้"
  leader_trait_skirmisher_desc:0 "This leader prefers to skirmish against their opponents before engaging them in fair combat."
@@ -1181,11 +1181,11 @@
  leader_trait_disorganized_desc:1 "This leader's lack of organizational skills causes their troops to function more like a war band than a proper military."
  leader_trait_lawless:1 "Corruption"
  leader_trait_lawless_desc:1 "This leader is in the pocket of local gangs and pirates."
- leader_trait_defence_engineer:0 "Defense Engineer"
+ leader_trait_defence_engineer:0 "วิศวกรป้องกัน"
  leader_trait_defence_engineer_desc:0 "This leader focuses on making orbital defenses into an impenetrable wall of death against potential invasion forces."
  leader_trait_defence_engineer_2:0 "$leader_trait_defence_engineer$ II"
  leader_trait_defence_engineer_desc_2:0 "$leader_trait_defence_engineer_desc$"
- leader_trait_shadow_broker:0 "Shady Contacts"
+ leader_trait_shadow_broker:0 "ติดต่อในเงามืด"
  leader_trait_shadow_broker_desc:1 "This leader keeps a network of clandestine operatives at their disposal."
  leader_trait_educator:0 "Perceptive Mentor"
  leader_trait_educator_desc:1 "Knowledge and experience are the foundation of every great society. This leader possesses these values and does everything to promote and encourage them in others."
@@ -1301,7 +1301,7 @@
  leader_trait_bellicose_desc:1 "With a genius for logistics, this general maintains the efficiency of military operations with deceptively simple solutions."
  leader_trait_erudite:1 "Erudition"
  leader_trait_erudite_desc:1 "This leader possesses a vast intellect and a deep pool of knowledge."
- leader_trait_cyborg:0 "Cyborg"
+ leader_trait_cyborg:0 "ไซบอร์ก"
  leader_trait_cyborg_desc:0 "This leader has been heavily augmented with cybernetic implants."
  leader_trait_synthetic:1 "Synth"
  leader_trait_synthetic_desc:0 "This synthetic leader is equipped with a large collection of assorted software upgrades."
