--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -159,9 +159,9 @@
  leader_trait_engineer_2_hive_desc:0 "$leader_trait_engineer_hive_desc$"
  leader_trait_engineer_2_machine:0 "$leader_trait_engineer_machine$ II"
  leader_trait_engineer_2_machine_desc:0 "$leader_trait_engineer_machine_desc$"
- leader_trait_annihilator_hive:0 "Annihilator"
+ leader_trait_annihilator_hive:0 "นักทำลายล้าง"
  leader_trait_annihilator_hive_desc:1 "This drone focuses on the quick destruction of planetary defenses, razing fortresses to the ground."
- leader_trait_annihilator_machine:0 "Annihilator"
+ leader_trait_annihilator_machine:0 "นักทำลายล้าง"
  leader_trait_annihilator_machine_desc:1 "This unit focuses on the quick destruction of planetary defenses, razing fortresses to the ground."
  leader_trait_artillerist_hive:0 "Artillerist"
  leader_trait_artillerist_hive_desc:0 "This drone's ability to operate the fleet's weapon systems is extremely accurate and deadly."
@@ -187,9 +187,9 @@
  leader_trait_par_zealot_hive_desc:0 "This drone's dedication to our continued survival is matched only by its thirst for understanding our enemies' motives and driving forces, for the purpose of learning and advancing the hive's capabilities."
  leader_trait_par_zealot_machine:0 "Adaptive Learning Patterns"
  leader_trait_par_zealot_machine_desc:0 "This unit is designed to analyze the motives and driving forces of hostile species, in order to ensure the survival and prosperity of the consciousness."
- leader_trait_demolisher_hive:0 "Demolisher"
+ leader_trait_demolisher_hive:0 "นักรื้อถอน"
  leader_trait_demolisher_hive_desc:1 "This drone specializes in destroying Starbases and Defense Platforms."
- leader_trait_demolisher_machine:0 "Demolisher"
+ leader_trait_demolisher_machine:0 "นักรื้อถอน"
  leader_trait_demolisher_machine_desc:1 "This unit is optimized for destroying Starbases and Defense Platforms."
  leader_trait_shipbreaker_hive:0 "Shipbreaker"
  leader_trait_shipbreaker_hive_desc:0 "This drone salvages valuable alloys from destroyed enemy ships."
@@ -223,9 +223,9 @@
  leader_trait_juryrigger_2_hive_desc:0 "$leader_trait_juryrigger_hive_desc$"
  leader_trait_juryrigger_2_machine:0 "$leader_trait_juryrigger_machine$ II"
  leader_trait_juryrigger_2_machine_desc:0 "$leader_trait_juryrigger_machine_desc$"
- leader_trait_surgical_bombardment_hive:0 "Surgical Bombardment"
+ leader_trait_surgical_bombardment_hive:0 "ทิ้งระเบิดเฉียบคม"
  leader_trait_surgical_bombardment_hive_desc:1 "Utilizing precise sensor data, this drone can deliver devastating attacks to ground armies with minimal collateral damage."
- leader_trait_surgical_bombardment_machine:0 "Surgical Bombardment"
+ leader_trait_surgical_bombardment_machine:0 "ทิ้งระเบิดเฉียบคม"
  leader_trait_surgical_bombardment_machine_desc:1 "Utilizing precise sensor data, this unit can deliver devastating attacks to ground armies with minimal collateral damage."
  leader_trait_scout_hive:0 "Scout"
  leader_trait_scout_hive_desc:1 "This drone is specialized for reconnaissance, ensuring we get the most out of long-range starship sensors."
