--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -663,10 +663,10 @@
  HAS_ORBITAL_BOMBARDMENT_NOT_TRIGGER:0 "Is NOT under Orbital Bombardment"
  ORBITAL_BOMBARDMENT_TRIGGER:0 "Orbital bombardment is $STANCE|Y$"
  ORBITAL_BOMBARDMENT_NOT_TRIGGER:0 "Orbital bombardment is not $STANCE|Y$"
- HAS_MIGRATION_ACCESS_TRIGGER:0 "Has migration access to $COUNTRY|Y$"
- HAS_NOT_MIGRATION_ACCESS_TRIGGER:0 "Has NOT migration access to $COUNTRY|Y$"
- GRANTS_MIGRATION_ACCESS_TRIGGER:0 "Grants migration access"
- NOT_GRANTS_MIGRATION_ACCESS_TRIGGER:0 "Does NOT grant migration access"
+ HAS_MIGRATION_ACCESS_TRIGGER:0 "สามารถย้ายถิ่นฐานไปที่ $COUNTRY|Y$ ได้"
+ HAS_NOT_MIGRATION_ACCESS_TRIGGER:0 "ไม่สามารถย้ายถิ่นฐานไปที่ $COUNTRY|Y$ ได้"
+ GRANTS_MIGRATION_ACCESS_TRIGGER:0 "สามารถย้ายถิ่นฐานได้"
+ NOT_GRANTS_MIGRATION_ACCESS_TRIGGER:0 "ไม่สามารถย้ายถิ่นฐานได้"
  TECH_RATIO_TRIGGER:0 "The ratio of tech research between $COUNTRY|Y$ and $|FROMY$ is $COMPARE$ $VALUE|Y$"
  TECH_RATIO_NOT_TRIGGER:0 "The ratio of tech research between $COUNTRY|Y$ and $|FROMY$ is NOT $COMPARE$ $VALUE|Y$"
  ACTION_IS_ACTIVE_TRIGGER:0 "Trade action is already active in a trade deal for $COUNTRY|Y$"
@@ -1253,7 +1253,7 @@
  REMOVE_DISTRICT_EFFECT:0 "ลบเขต"
  REMOVE_ALL_DISTRICTS_EFFECT:1 "ลบเขตทั้งหมด"
  REMOVE_SPECIFIC_DISTRICT_EFFECT:0 "ลบ $DISTRICT|Y$"
- CHANGE_PLANET_SIZE:1 "Planet Size of $PLANET|Y$: $VALUE|Y$"
+ CHANGE_PLANET_SIZE:1 "ขนาดดาวเคราะห์ $PLANET|Y$: $VALUE|Y$"
  SET_PLANET_SIZE:0 "Change the size to: $VALUE|Y$"
  SET_BLOCKER_EFFECT:0 "Set Blocker: $BLOCKER|Y$"
  SET_BLOCKER_RANDOM_EFFECT:0 "Set Random Blocker"
@@ -1459,8 +1459,8 @@
  TRIGGER_NOT_IS_CONSTRUCTING:0 "Is NOT constructing a $KEY|Y$"
  TRIGGER_HAS_COMPONENT:0 "มีส่วนประกอบ $KEY|Y$"
  TRIGGER_NOT_HAS_COMPONENT:0 "ไม่มีส่วนประกอบ $KEY|Y$"
- PLANET_NOT_SIZE_TRIGGER:0 "Planet Size is NOT $COMPARE$ $VAL|Y$"
- PLANET_SIZE_TRIGGER:0 "Planet Size is $COMPARE$ $VAL|Y$"
+ PLANET_NOT_SIZE_TRIGGER:0 "ขนาดดาวเคราะห์ ไม่$COMPARE$ $VAL|Y$"
+ PLANET_SIZE_TRIGGER:0 "ขนาดดาวเคราะห์ $COMPARE$ $VAL|Y$"
  EMPIRE_NOT_SIZE_TRIGGER:1 "$EMPIRE_SIZE$ is NOT $COMPARE$ $VAL|Y$"
  EMPIRE_SIZE_TRIGGER:1 "$EMPIRE_SIZE$ is $COMPARE$ $VAL|Y$"
  EMPIRE_SPRAWL_NOT_OVER_CAP_TRIGGER:0 "$EMPIRE_SIZE$ is NOT $COMPARE$ $VAL|Y$ over Administration Capacity"
@@ -1836,7 +1836,7 @@
  CHECK_ECONOMIC_PRODUCTION_MODIFIER_VALUE_NOT:0 "Modifiers for producing $RESOURCE|Y$ as a $JOB|Y$ are NOT $COMPARATOR$ $VAL2|Y$ (current: $VAL1$)"
  TRIGGER_IS_TOTAL_WAR:0 "Is a Total War"
  TRIGGER_IS_NOT_TOTAL_WAR:0 "Is NOT a Total War"
- CREATE_ESPIONAGE_ASSET:2 "Gain $TYPE|Y$ Asset for use against the $COUNTRY|Y$."
+ CREATE_ESPIONAGE_ASSET:2 "ได้จารชน $TYPE|Y$ เพื่อใช้กับ $COUNTRY|Y$"
  DESTROY_ESPIONAGE_ASSET:1 "Destroy $TYPE|Y$ espionage asset"
  ASSIGN_ESPIONAGE_ASSET:1 "Assign $TYPE|Y$ espionage asset"
  UNASSIGN_ESPIONAGE_ASSET:1 "Unassign $TYPE|Y$ espionage asset"
