--- a/mod/thmod/localisation/english/utopia_ascension_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_ascension_l_english.yml
@@ -34,7 +34,7 @@
  mind_over_matter_tooltip:1 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_psionics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_mind_over_matter_name$ ซึ่งให้เทคโนโลยีพลังจิตให้เป็นทางเลือกในการวิจัยได้"
  transcendence_tooltip:0 "สมาชิกทุกคนในเผ่าพันธุ์ของเราจะปลดล็อกศักยภาพพลังจิตโดยสมบูรณ์"
  engineered_evolution_tooltip:1 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_genetics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_engineered_evolution_name$ ซึ่งให้เทคโนโลยีพันธุศาสตร์ให้เป็นทางเลือกในการวิจัยได้"
- opinion_cyborgs_fanatic:0 "Wicked Cyborgs"
+ opinion_cyborgs_fanatic:0 "ไซบอร์กชั่วร้าย"
  opinion_cyborgs_normal:0 "$opinion_cyborgs_fanatic$"
  opinion_synthetics_fanatic:0 "Soulless Machines"
  opinion_synthetics_normal:0 "$opinion_synthetics_fanatic$"
@@ -228,7 +228,7 @@
  utopia.3039.desc:0 "$boon.ship.link$\n\nUsing their psionic powers, our crewmembers are now able to directly affect the movement of our ships, increasing their evasiveness in the face of enemy fire."
  utopia.3040.desc:0 "$boon.ship.link$\n\nUsing their psionic powers, our crewmembers are now able to perform limited field repairs, mending hull fissures with their minds alone."
  utopia.3041.desc:0 "$boon.psi.link$\n\nOur telepaths have used this power to momentarily slow down the aging process for our most prominent leaders, adding decades to their natural lives. Alas, there was not enough psychic energy to bestow this effect upon the population at large."
- utopia.3041.tooltip:0 "All leaders gain the §YIncreased Lifespan§! trait, granting §G+40§! years of leader lifespan."
+ utopia.3041.tooltip:0 "ผู้นำทุกคนจะได้รับคุณลักษณะ §Yเพิ่มอายุขัย§! ที่ทำให้อายุขัยของผู้นำ §G+40§! ปี"
  utopia.3042.desc:0 "$boon.ship.link$\n\nUsing their psionic powers, our crewmembers are now able to augment the strength of the thrusters on their ships, resulting in greatly increased sub-light speed."
  utopia.3043.desc:0 "$boon.psi.link$\n\nThis has fortified the minds of our soldiers, who are now willing to brave any dangers on the battlefield. Their esprit de corps is without equal."
  utopia.3044.desc:0 "$boon.psi.link$\n\nWe can now sense vessels as they move through space at a far greater distance than any conventional sensor array would be capable of."
@@ -611,7 +611,7 @@
  utopia.3400.desc:0 "The immortal entity known as §H[chosen_one.GetName]§!, previously [chosen_one_species.GetName] but now something far more, has attracted a large and devout following in the [Root.GetName]. Worshipped by many as a supreme deity, a call has gone out to officially crown the [chosen_one.GetTitle] as the permanent ruler of our great empire, now and into perpetuity."
  utopia.3400.a:0 "A powerful psychic, but a God? Hardly."
  utopia.3400.b:0 "May [chosen_one.GetHerHis] reign stretch into infinity... and beyond!"
- reject_god_emperor:0 "[chosen_one.GetName] will remain as [chosen_one.GetTitle]."
+ reject_god_emperor:0 "[chosen_one.GetName] จะยังคงเป็น [chosen_one.GetTitle]"
  utopia.3401.name:0 "[chosen_one.GetTitle] crowned on [From.Capital.GetName]"
  utopia.3401.desc:0 "An immensely powerful [chosen_one_species.GetName] psychic has seized control of the §H[From.GetName]§!! This immortal being, referred to in hushed whispers as the "Chosen One" by [chosen_one.GetHerHis] followers, was crowned on [From.Capital.GetName] in a lavish ceremony this morning. A communique celebrating the eternal rule of §H[chosen_one.GetRulerTitle] [chosen_one.GetRegnalName]§! was sent out to all interstellar governments shortly thereafter."
  utopia.3401.a:0 "[chosen_one.GetName] has been touched by the Shroud."
