--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -16,7 +16,7 @@
  MEGASTRUCTURE_UPGRADES_TO:0 "อัปเกรดเป็น:"
  MEGASTRUCTURE_SHIPYARD_TAB_DISABLED_NOT_OWNER:0 "§RYou are not the owner of this Megastructure.§!"
  MEGASTRUCTURE_SHIPYARD_TAB_DISABLED_OCCUPIED:0 "§RThis Megastructure is under occupation.§!"
- ring_world_1_MEGASTRUCTURE_DETAILS:1 "A §Y$pc_ringworld_habitable$§! allows for multiple planet-like zones, cannibalizing all other planets in the system for materials."
+ ring_world_1_MEGASTRUCTURE_DETAILS:1 "§Y$pc_ringworld_habitable$§! สามารถมีโซนคล้ายดาวเคราะห์หลายๆโซน โดยกินดาวเคราะห์ดวงอื่นทั้งหมดในระบบเพื่อหาวัตถุดิบ"
  ring_world_1_CONSTRUCTION_INFO_DELAYED:4 "A full Ring World consists of 4 Completed Ring World Sections, each equivalent to a massive Gaia world."
  ring_world_1:0 "โลกวงแหวน (ขั้นที่1:ที่ตั้ง)"
  ring_world_1_DESC:0 "This complex will serve as a staging ground, resource depot and living quarters for the hundreds of thousands of personnel involved in the Ring World's construction."
@@ -177,7 +177,7 @@
  trait_cyborg_power_intensive:0 "Power Intensive"
  trait_cyborg_power_intensive_desc:0 "§LThese cybernetic components require frequent recharging from an external power source.§!"
  TRAIT_POWER_INTENSIVE_EFFECT:0 "Increases $r_energy$ Upkeep by §R+1§!"
- CYBORG_ENERGY_UPKEEP_EFFECT:0 "Increases $r_energy$ Upkeep by §R+$@cyborg_energy_upkeep$§!"
+ CYBORG_ENERGY_UPKEEP_EFFECT:0 "เพิ่มค่าบำรุงรักษา $r_energy$ §R+$@cyborg_energy_upkeep$§!"
  trait_psionic:0 "พลังจิต"
  trait_psionic_desc:0 "§LAll members of this species possess powerful psionic abilities. They typically communicate with each other through telepathy.§!\n"
  trait_self_modified:0 "แก้ไขตัวเอง"
