--- a/mod/thmod/localisation/english/paragon_3_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_3_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
  skrand_desc:1 "Although the past weighs on his shoulders, Skrand never loses sight of the future, approaching the unknown with passion and determination. With a solemn vow of service, he undertakes his duty."
  EXP_PENALTY_OVER_LEADER_CAP:0 "ตัวคูณค่าประสบการณ์ได้รับโทษจากการมีผู้นำเกินขีดจำกัด: $MULT$"
- action.600.name:0 "Death From Above"
- action.600.desc:0 "The Orbital Bombardment of §H[From.GetName]§! has sparked our Council to discuss how we should respond in the hypothetical scenario of a surrender."
- action.600.A:0 "Prohibit their surrender."
- action.600.B:0 "Allow their surrender."
+ action.600.name:0 "ความตายจากเบื้องบน"
+ action.600.desc:0 "การทิ้งระเบิดในวงโคจรของ §H[From.GetName]§! ได้จุดประกายให้สภาของเราหารือ กันว่าเราควรตอบสนองอย่างไร เมื่อมีการยอมจำนน"
+ action.600.A:0 "ห้ามการยอมจำนนของพวกเขา"
+ action.600.B:0 "ให้พวกเขายอมจำนนได้"
  tech_xeno_linguistics:0 "ภาษาศาสตร์-ต่างดาว"
  tech_xeno_linguistics_desc:0 "Given recent encounters with intelligent races, it is essential that we improve our xeno-linguistic capabilities."
  tech_xeno_linguistics_effect:1 "ได้รับ $r_influence$ จำนวนเล็กน้อย\nทำให้ §Hผู้นำที่มีชื่อเสียง§! ปรากฏตัว"
